k8s/ms-customer/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ms-customer
  labels:
    app: ms-customer

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ms-customer

  template:
    metadata:
      labels:
        app: ms-customer

    spec:
      containers:
        - name: ms-customer
          image: bootcamplabacr.azurecr.io/ms-customer:1.1.0-20

          ports:
            - containerPort: 8081

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          imagePullPolicy: Always
