k8s/ms-customer/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ms-customer
  labels:
    app: ms-customer

spec:
  selector:
    app: ms-customer

  ports:
    - name: http
      port: 8081
      targetPort: 8081

  type: ClusterIP
