k8s/ms-customer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ms-customer-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: ms-customer
                port:
                  number: 8081
